--- a/RouteOptimizer/RouteOptimizer/Base.lproj/Main.storyboard
+++ b/RouteOptimizer/RouteOptimizer/Base.lproj/Main.storyboard
@@ -17,11 +17,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VCm-eS-pl2">
-                                <rect key="frame" x="0.0" y="170" width="320" height="15"/>
+                                <rect key="frame" x="0.0" y="178" width="320" height="0.0"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="15" id="BIM-zx-WHy"/>
+                                    <constraint firstAttribute="height" id="BIM-zx-WHy"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4nf-vf-ECw">
                                     <size key="itemSize" width="50" height="50"/>
@@ -32,10 +32,10 @@
                                 <cells/>
                             </collectionView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u9i-e6-1U2">
-                                <rect key="frame" x="0.0" y="20" width="320" height="150"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="158"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="7VV-f6-L9g"/>
+                                    <constraint firstAttribute="height" constant="158" id="7VV-f6-L9g"/>
                                 </constraints>
                                 <connections>
                                     <segue destination="s5C-YS-F4Z" kind="embed" identifier="SearchViewControllerSegue" id="hhN-8k-HAo"/>
@@ -56,7 +56,7 @@
                                 <cells/>
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="am9-Xj-d4U" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="170" width="320" height="398"/>
+                                <rect key="frame" x="0.0" y="178" width="320" height="390"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -156,55 +156,86 @@
                         <viewControllerLayoutGuide type="bottom" id="fv0-l2-yiI"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="hLl-a7-qcM">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="158"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Origin" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="IRJ-7F-Zmq" userLabel="startTextField">
-                                <rect key="frame" x="15" y="20" width="290.5" height="30"/>
+                                <rect key="frame" x="15" y="44" width="290.5" height="30"/>
                                 <animations/>
+                                <color key="backgroundColor" red="0.12549019607843137" green="0.090196078431372548" blue="0.33725490196078434" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="originDidBeginEditing:" destination="s5C-YS-F4Z" eventType="editingDidBegin" id="dC2-33-FfQ"/>
                                     <action selector="searchEditingDidEnd:" destination="s5C-YS-F4Z" eventType="editingDidEnd" id="Qsd-G2-PTN"/>
                                     <action selector="searchTextDidChange:" destination="s5C-YS-F4Z" eventType="editingChanged" id="x40-nU-Gki"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Stop" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Kr1-WD-4p0">
-                                <rect key="frame" x="15" y="60" width="287.5" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Destination" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="MUy-UG-9VO">
+                                <rect key="frame" x="15" y="120" width="290" height="30"/>
                                 <animations/>
+                                <color key="backgroundColor" red="0.12549019610000001" green="0.090196078430000007" blue="0.33725490200000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="searchEditingDidEnd:" destination="s5C-YS-F4Z" eventType="editingDidEnd" id="g0O-Ka-axI"/>
-                                    <action selector="searchTextDidChange:" destination="s5C-YS-F4Z" eventType="editingChanged" id="2ct-0v-AbO"/>
-                                    <action selector="secondaryDestinationDidBeginEditing:" destination="s5C-YS-F4Z" eventType="editingDidBegin" id="axC-8T-zxx"/>
-                                </connections>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Destination" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="MUy-UG-9VO">
-                                <rect key="frame" x="15" y="98" width="288" height="30"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="destinationDidBeginEditing:" destination="s5C-YS-F4Z" eventType="editingDidBegin" id="mSE-Bg-fqQ"/>
                                     <action selector="searchEditingDidEnd:" destination="s5C-YS-F4Z" eventType="editingDidEnd" id="cwH-Ve-Hca"/>
                                     <action selector="searchTextDidChange:" destination="s5C-YS-F4Z" eventType="editingChanged" id="ufH-JW-PYT"/>
                                 </connections>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="stophop" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b1p-5b-dIA">
+                                <rect key="frame" x="120" y="12" width="79" height="24"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Stop" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="j7g-ey-zTy">
+                                <rect key="frame" x="15" y="82" width="290" height="30"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.12549019610000001" green="0.090196078430000007" blue="0.33725490200000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="searchEditingDidEnd:" destination="s5C-YS-F4Z" eventType="editingDidEnd" id="lSp-Kq-paJ"/>
+                                    <action selector="searchTextDidChange:" destination="s5C-YS-F4Z" eventType="editingChanged" id="puM-bt-BJt"/>
+                                    <action selector="secondaryDestinationDidBeginEditing:" destination="s5C-YS-F4Z" eventType="editingDidBegin" id="vUB-se-Cs9"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.27843137254901962" green="0.17254901960784313" blue="0.78823529411764703" alpha="1" colorSpace="calibratedRGB"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="MUy-UG-9VO" firstAttribute="top" secondItem="Kr1-WD-4p0" secondAttribute="bottom" constant="8" id="C1S-Us-mxJ"/>
-                            <constraint firstItem="Kr1-WD-4p0" firstAttribute="leading" secondItem="hLl-a7-qcM" secondAttribute="leading" constant="15" id="Fyq-sY-Nqx"/>
-                            <constraint firstAttribute="trailing" secondItem="Kr1-WD-4p0" secondAttribute="trailing" constant="15" id="Mg3-Kb-JyX"/>
+                            <constraint firstItem="j7g-ey-zTy" firstAttribute="top" secondItem="IRJ-7F-Zmq" secondAttribute="bottom" constant="8" id="1hz-Oa-DB4"/>
+                            <constraint firstAttribute="trailing" secondItem="j7g-ey-zTy" secondAttribute="trailing" constant="15" id="7cE-Vv-BhM"/>
+                            <constraint firstItem="fv0-l2-yiI" firstAttribute="top" secondItem="MUy-UG-9VO" secondAttribute="bottom" constant="8" id="9yQ-Y2-g75"/>
+                            <constraint firstItem="j7g-ey-zTy" firstAttribute="leading" secondItem="hLl-a7-qcM" secondAttribute="leading" constant="15" id="PcT-DY-brc"/>
                             <constraint firstItem="IRJ-7F-Zmq" firstAttribute="leading" secondItem="hLl-a7-qcM" secondAttribute="leading" constant="15" id="XML-y6-BOH"/>
+                            <constraint firstItem="b1p-5b-dIA" firstAttribute="top" secondItem="SKh-s7-eqc" secondAttribute="bottom" constant="12" id="XSO-GX-r8g"/>
                             <constraint firstAttribute="trailing" secondItem="MUy-UG-9VO" secondAttribute="trailing" constant="15" id="ZB4-e2-8xF"/>
                             <constraint firstAttribute="trailing" secondItem="IRJ-7F-Zmq" secondAttribute="trailing" constant="15" id="dpt-Pw-cXf"/>
-                            <constraint firstItem="IRJ-7F-Zmq" firstAttribute="top" secondItem="hLl-a7-qcM" secondAttribute="top" constant="20" id="kIM-aO-HUp"/>
-                            <constraint firstItem="Kr1-WD-4p0" firstAttribute="top" secondItem="IRJ-7F-Zmq" secondAttribute="bottom" constant="8" id="xMA-7L-EKe"/>
+                            <constraint firstItem="b1p-5b-dIA" firstAttribute="centerX" secondItem="hLl-a7-qcM" secondAttribute="centerX" id="jxW-cY-bYp"/>
+                            <constraint firstItem="MUy-UG-9VO" firstAttribute="top" secondItem="j7g-ey-zTy" secondAttribute="bottom" constant="8" id="xmV-5K-lCN"/>
+                            <constraint firstItem="IRJ-7F-Zmq" firstAttribute="top" secondItem="b1p-5b-dIA" secondAttribute="bottom" constant="8" id="y3B-xP-MgR"/>
                             <constraint firstItem="MUy-UG-9VO" firstAttribute="leading" secondItem="hLl-a7-qcM" secondAttribute="leading" constant="15" id="ztr-YN-pHV"/>
                         </constraints>
                         <connections>
@@ -213,7 +244,7 @@
                     </view>
                     <connections>
                         <outlet property="endAddress" destination="MUy-UG-9VO" id="tyi-fA-l43"/>
-                        <outlet property="searchTerm" destination="Kr1-WD-4p0" id="YIV-8y-3Ic"/>
+                        <outlet property="searchTerm" destination="j7g-ey-zTy" id="rmo-P6-mU0"/>
                         <outlet property="startAddress" destination="IRJ-7F-Zmq" id="9mu-sK-Dai"/>
                         <outlet property="tapToDismissGestureRecognizer" destination="Cyf-Z0-MSp" id="b0I-Un-FLA"/>
                     </connections>
@@ -222,6 +253,46 @@
                 <tapGestureRecognizer id="Cyf-Z0-MSp"/>
             </objects>
             <point key="canvasLocation" x="27" y="1058"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="AXz-Mq-3CN">
+            <objects>
+                <viewController id="IDE-tq-JXI" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="u4h-dc-R8a">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Stop" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Kr1-WD-4p0">
+                                <rect key="frame" x="15" y="8" width="51.5" height="552"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.12549019607843137" green="0.090196078431372548" blue="0.33725490196078434" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="searchEditingDidEnd:" destination="s5C-YS-F4Z" eventType="editingDidEnd" id="g0O-Ka-axI"/>
+                                    <action selector="searchTextDidChange:" destination="s5C-YS-F4Z" eventType="editingChanged" id="2ct-0v-AbO"/>
+                                    <action selector="secondaryDestinationDidBeginEditing:" destination="s5C-YS-F4Z" eventType="editingDidBegin" id="axC-8T-zxx"/>
+                                </connections>
+                            </textField>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" red="0.27843137254901962" green="0.17254901960784313" blue="0.78823529411764703" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Kr1-WD-4p0" firstAttribute="top" secondItem="u4h-dc-R8a" secondAttribute="top" constant="8" id="6Iv-zp-HOq"/>
+                            <constraint firstItem="Kr1-WD-4p0" firstAttribute="leading" secondItem="u4h-dc-R8a" secondAttribute="leading" constant="15" id="9ms-ZS-LAU"/>
+                            <constraint firstAttribute="trailing" secondItem="Kr1-WD-4p0" secondAttribute="trailing" constant="15" id="bnP-zh-NfF"/>
+                            <constraint firstAttribute="bottom" secondItem="Kr1-WD-4p0" secondAttribute="bottom" constant="8" id="pEy-K8-U1x"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pIT-xn-M1h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="446" y="1058"/>
         </scene>
     </scenes>
 </document>
